--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,8 @@ body {
     /*TYPOGRAPHY*/
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
+
+    /*GLOBALS*/
+    margin:0; background-color:#F7F1ED;
+    }
 }
