--- a/styles/style.css
+++ b/styles/style.css
@@ -5,5 +5,20 @@ body {
 
     /*GLOBALS*/
     margin:0; background-color:#F7F1ED;
-    }
+}
+
+header {
+
+}
+
+header .top-logo {
+
+}
+
+main {
+
+}
+
+footer {
+
 }
