--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,12 @@ header {
 
 }
 
-header .top-logo {
+header .top-logo img{
+    display: block;
+    max-width: 100%;
+}
+
+header .top-title {
 
 }
 
