--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
 
 h1 {
+ font-weight: lighter;
+ /*not 100% sure if lighter is the right way to go about making an h1 Helvetica - Regular*/
 
 }
 
@@ -16,6 +18,7 @@ body {
     /*TYPOGRAPHY*/
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
+    color: #413939;
 
     /*GLOBALS*/
     margin:0; background-color:#F7F1ED;
@@ -28,9 +31,9 @@ header {
 header .top-logo img{
     display: block;
     width: 188px;
-    max-width: 100%;
+    /*max-width: 100%;*/
     margin: auto;
-    padding-top: 50px
+    padding-top: 30px;
 }
 
 header .top-title {
