H1 font SIZE, title centered, nav styling
H1 is now 2rem which is 32px like Xd was. I centered it bc Xd. Moved on to nav and display block didnt make next to eachother so did flex. Rid of bullet points. Trying to space like Xd and perhaps "space-evenly is correct"

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
 h1 {
  font-weight: lighter;
  /*not 100% sure if lighter is the right way to go about making an h1 Helvetica - Regular*/
+ font-size: 2rem;
 
 }
 
@@ -37,6 +38,13 @@ header .top-logo img{
 }
 
 header .top-title {
+    text-align: center;
+}
+
+header nav ul{
+    display: flex;
+    list-style: none;
+    justify-content: space-evenly;
 
 }
 
