Made NAV have BORDER and more
edited nav to have a border that is the grey color, has radius, is text align center, but not horizontally aligned yet, need to double check width bc might look off and make the last button different.

--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,15 @@ header nav ul{
     display: flex;
     list-style: none;
     justify-content: space-evenly;
+}
 
+header nav ul li{
+    padding: 3px;
+    text-align: center;
+    border: #413939 solid;
+    border-radius: 25px;
+    width: 58px;
+    height: 24px;
 }
 
 main {
