PADDING on NAV, added SECTIONS for top & btm half with width of imgs for top
Had padding 0 to see if helped with spacing or smthng. now have two sections with only top with a class that I made the images the width and height of Xd imgs.

--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,7 @@ header nav ul{
     display: flex;
     list-style: none;
     justify-content: space-evenly;
+    padding: 0;
 }
 
 header nav ul li{
@@ -58,6 +59,11 @@ header nav ul li{
 
 main {
 
+}
+
+main .top-half img {
+    width: 365.5px;
+    height: 365.5px;
 }
 
 footer {
