css LINE-HEIGHT for bottom section
same for everything except footer but I don't think I have to worry about that in this code

--- a/styles/style.css
+++ b/styles/style.css
@@ -101,6 +101,14 @@ main .bottom-half img {
     width: 364px;
 }
 
+main .bottom-half p {
+    line-height: 24px;
+}
+
+main .bottom-half h2 {
+    line-height: 22px;
+}
+
 footer {
 
 }
