made new WHITE LOGO, bg color, <p>
<p> color and center, the bg of footer is the red color. there is footer img for when I ad margin or flex etc

--- a/styles/style.css
+++ b/styles/style.css
@@ -123,5 +123,15 @@ main .button-link-bottom a {
 }
 
 footer {
+    background-color: #98002E;
+}
 
+footer img {
+
+}
+
+footer p {
+    display: flex;
+    justify-content: center;
+    color: #FFFFFF;
 }
