Img margin and text margin
I made the line like XD and changed and added divs and classes in html

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,6 @@ h3 {
     font-size: 18px;
 }
 
-
 body {
     /*TYPOGRAPHY*/
     font-family: Arial, Helvetica, sans-serif;
@@ -69,6 +68,15 @@ main .top-half img {
     margin-bottom: 33px;
 }
 
+main .top-half .img-center {
+    display: block;
+    text-align: center;
+}
+
+main .bottom-half .img-center {
+    display: block;
+    text-align: center;
+}
 main .line-height-top p{
     line-height: 19px;
 }
@@ -82,19 +90,30 @@ main .line-height-bottom p{
 }
 
 main h2 {
-    margin-top: 0;
+    text-align: left;
+    margin-left: 7.5%;
+    margin-right: 7.5%;
 }
 
 main p {
     margin-bottom: 36px;
+    text-align: left;
+    margin-left: 7.5%;
+    margin-right: 7.5%;
 }
 
-main hr .solid {
+main .solid {
     border-top: 1px solid #98002E;
+    width: 366px;
   }
 
 main .bottom-half {
     background-color: #F4E2D6;
+    margin-top: 128px;
+}
+
+main .bottom-half .color-height {
+    padding-top: 128px;
 }
 
 main .bottom-half img {
@@ -113,6 +132,9 @@ main .button-link-bottom {
     background-color: #98002E;
     border: 2px #98002E solid;
     border-radius: 25px;
+    width: 364px;
+    height: 50px;
+
 }
 
 main .button-link-bottom a {
