did HEADER MEDIA query
made the sizes and spacing right except for the spacing under "Latest News" and the width of the pills

--- a/styles/style.css
+++ b/styles/style.css
@@ -50,7 +50,6 @@ header nav ul{
 }
 
 header nav ul li{
-    padding: 3px;
     text-align: center;
     width: 58px;
     height: 24px;
@@ -58,6 +57,7 @@ header nav ul li{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 12px;
 }
 
 header nav ul li a{
@@ -239,12 +239,52 @@ footer p {
         padding: 2rem;
     }
 
-    header .top-logo img{
-        width: 188px;
-        margin: auto;
-        padding-top: 30px;
-        padding-bottom: 64px;
+    h1 {
+        font-weight: lighter;
+        font-size: 3rem;
+        line-height: 58px;
+    }
+    
+    h2 {
+        font-size: 28px;
     }
 
+    header .top-logo img{
+        width: 400px;
+        padding-top: 96px;
+        margin-left: 34px;
+        padding-bottom: 32px;
+    }
+
+    header .top-title {
+        margin-left: 34px;
+        text-align: left;
+    }
+    
+    header nav ul{
+        display: flex;
+        list-style: none;
+        justify-content: flex-start;
+        padding: 0;
+        margin-left: 34px;
+        width: 206px;
+    }
+    
+    header nav ul li {
+        margin-right: 16px;
+    }
+    
+    header nav ul li a{
+        color:#413939;
+        text-decoration: none;
+        background-color: none;
+        text-align: center;
+        width: 58px;
+        height: 24px;
+        line-height: 14px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
     
 }
