--- a/styles/style.css
+++ b/styles/style.css
@@ -200,6 +200,7 @@ main .button-link-bottom {
     height: 50px;
     margin: auto;
     margin-top: 67px;
+    margin-bottom: 15px;
 }
 
 main .button-link-bottom a {
@@ -262,9 +263,8 @@ footer p {
     }
 
     body {
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 2rem;
+        /* max-width: 1200px; */
+        margin: 0;
         background-image: url("/images/icon-computer.png");
         background-repeat: no-repeat;
         background-position-x:right;
@@ -382,18 +382,20 @@ footer p {
         margin-left: 35px;
     }
 
-    main .bottom-half {
-    background-color: #F4E2D6;
-    margin-top: 128px;
-    padding-bottom: 64px;
-    }
-
     main .bottom-half img {
         width: 750px;
     }
 
     main .bottom-half h2 {
         line-height: 34px;
+    }
+
+    main .classroom-padding {
+        padding-bottom: 0px;
+    }
+    
+    main .h2-padding {
+        padding-top: 0px;
     }
 
     .grid-2 {
@@ -404,7 +406,7 @@ footer p {
     }
 
     .grid-item-bottom-1 {
-        width: 60%;
+        width: 62.5%;
         justify-self: center;
     }
 
@@ -414,26 +416,52 @@ footer p {
 
     .grid-item-bottom-3 {
         justify-self: center;
-        width: 60%;
-        margin-right: 33px;
+        width: 62.5%;
     }
 
     .grid-item-bottom-4 {
         justify-self: center;
-        width: 60%;
-        margin-right: 33px;
-
+        width: 62.5%;
     }
 
     .grid-item-bottom-5 {
         justify-self: center;
         width: 60%;
         margin-right: 33px;
-
     }
 
 }
 
 @media screen and (min-width: 1920px) {
 
+    .grid {
+        display: grid;
+        /* grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto; */
+        grid-template: 2fr / 1fr 1fr 1fr;
+        gap: 2rem;
+        margin-top: 150px;
+    }
+    
+    .grid-item-1 {
+        grid-column: 1;
+    }
+
+    .grid-item-2 {
+        grid-column: 2;
+    }
+
+    .grid-item-3 {
+        grid-column: 3;
+    }
+
+    .grid-item-4 {
+        grid-column: 2;
+    }
+
+    .grid-item-5 {
+        grid-column: 1;
+    }
+
+    
 }
